--- a/cv_tm/index.html
+++ b/cv_tm/index.html
@@ -61,7 +61,7 @@
 								<div>
 									<a href="images/fulls/06.jpg">
 										<img src="images/thumbs/06.jpg" alt="" />
-										<h3>А иногда, тестирую не я)</h3>
+										<h3>А иногда тестирую не я)</h3>
 									</a>
 									<a href="images/fulls/07.jpg">
 										<img src="images/thumbs/07.jpg" alt="" />
